<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ghostchippies.spellblasterforandroidv44.MainActivity">

    <TextView
        android:id="@+id/landing_screen_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="48sp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/landing_screen"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_open_game"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="100dp"
            android:onClick="toGame"
            android:text="@string/button_start_game" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:onClick="toSettings"
            android:text="@string/button_settings" />

        <Button
            android:id="@+id/button_high_score"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:onClick="toHighScores"
            android:text="@string/button_high_score" />
    </LinearLayout>

</LinearLayout>
