<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_actionbar_id"
        android:onClick="goToSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="2"
        android:title="@string/game_menu_bar1"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/share_actionbar_id"
        android:onClick="socialShare"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        android:title="@string/game_menu_bar3"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/stop_music"
        android:onClick="stopMusic"
        android:icon="@drawable/ic_volume_mute_black_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/stop"
        tools:ignore="AppCompatResource" />


</menu>