<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:imeOptions="flagNoExtractUi"
    android:orientation="vertical"
    tools:context="com.ghostchippies.spellblasterforandroidv44.Game">

    <!--- Instructions -->

    <!-- Main game screen -->

    <TextView
        android:id="@+id/game_instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/game_instructions"
        android:textSize="20sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/score_quiz_number_layout"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/quiz_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/shuffled_letters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:padding="10sp"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/game_word_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:gravity="center"
        android:padding="10sp"
        android:textSize="24sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/hint_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reveal_word"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:padding="10sp"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/game_guess_word_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/game_guess_word"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/game_guess_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/word_input"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:visibility="gone" />

    </LinearLayout>

    <!-- After game screen -->

    <TextView
        android:id="@+id/score_label"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/to_home_button"
        android:layout_width="match_parent"
        android:onClick="gameToHomeScreen"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/button_game_home" />

    <Button
        android:id="@+id/to_high_scores"
        android:layout_width="match_parent"
        android:onClick="gameToHighScores"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/game_button_high_scores" />

    <TextView
        android:id="@+id/sources_audio_1"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:visibility="gone"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:text="@string/audio_source_1" />

    <TextView
        android:id="@+id/sources_audio_2"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:textSize="12sp"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:text="@string/audio_source_2" />

    <TextView
        android:id="@+id/sources_audio_3"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:textSize="12sp"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:text="@string/audio_source_3" />


</LinearLayout>